[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Minigame1/Pause/Pause3D.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Minigame1/Font/ALBAS___.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/PauseMenu/PointerPauseMenu.gd" type="Script" id=3]
[ext_resource path="res://Audio/changeSelection3D.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/reject3D.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/confirm3D.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=13]
size = 150
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
size = 90
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=15]
size = 100
font_data = ExtResource( 2 )

[node name="Pause3D" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PauseLayer" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 2

[node name="Pause" type="Control" parent="PauseLayer"]
pause_mode = 2
visible = false
margin_left = 528.999
margin_top = 29.1941
margin_right = 1421.0
margin_bottom = 698.194
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="PauseLayer/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 25.999
margin_bottom = 332.0
color = Color( 0.113725, 0.0235294, 0.223529, 0.831373 )

[node name="MarginContainer" type="MarginContainer" parent="PauseLayer/Pause/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 83.6918
margin_top = 40.3917
margin_right = -96.3081
margin_bottom = 4.39166

[node name="VBoxContainer" type="VBoxContainer" parent="PauseLayer/Pause/ColorRect/MarginContainer"]
margin_right = 738.0
margin_bottom = 964.0

[node name="Label" type="Label" parent="PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer"]
pause_mode = 2
margin_right = 738.0
margin_bottom = 237.0
custom_fonts/font = SubResource( 13 )
text = "Pause"
align = 1

[node name="MenuEntries" type="VBoxContainer" parent="PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer"]
pause_mode = 2
margin_top = 241.0
margin_right = 738.0
margin_bottom = 697.0
custom_constants/separation = 15

[node name="Resume" type="Label" parent="PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer/MenuEntries"]
pause_mode = 2
margin_right = 738.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 14 )
text = "Resume"
align = 1

[node name="Guide" type="Label" parent="PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer/MenuEntries"]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.392157 )
margin_top = 157.0
margin_right = 738.0
margin_bottom = 299.0
custom_fonts/font = SubResource( 14 )
text = "Guide"
align = 1

[node name="Camera" type="Label" parent="PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer/MenuEntries"]
pause_mode = 2
visible = false
margin_top = 314.0
margin_right = 738.0
margin_bottom = 456.0
custom_fonts/font = SubResource( 14 )
text = "Change Camera"
align = 1

[node name="Titlescreen" type="Label" parent="PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer/MenuEntries"]
pause_mode = 2
margin_top = 314.0
margin_right = 738.0
margin_bottom = 456.0
custom_fonts/font = SubResource( 14 )
text = "Titlescreen"
align = 1

[node name="Pointer" type="Sprite" parent="PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer/MenuEntries"]
pause_mode = 2
position = Vector2( 110.016, 71.5927 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer/MenuEntries/Pointer"]
margin_left = -35.875
margin_top = -76.5331
margin_right = 42.125
margin_bottom = 81.4669
custom_fonts/font = SubResource( 15 )
text = "---"

[node name="Sounds" type="Node" parent="PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer/MenuEntries/Pointer"]

[node name="changeOption" type="AudioStreamPlayer" parent="PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer/MenuEntries/Pointer/Sounds"]
stream = ExtResource( 4 )
volume_db = -15.0

[node name="rejectOption" type="AudioStreamPlayer" parent="PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer/MenuEntries/Pointer/Sounds"]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="confirmOption" type="AudioStreamPlayer" parent="PauseLayer/Pause/ColorRect/MarginContainer/VBoxContainer/MenuEntries/Pointer/Sounds"]
stream = ExtResource( 6 )
volume_db = -15.0
